--- a/src/.classpath
+++ b/src/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="lib" path="Drivers/postgresql-42.0.0.jre7.jar"/>
 	<classpathentry kind="lib" path="Drivers/mail.jar"/>
+	<classpathentry kind="lib" path="Driver/mail.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
