--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/luca/Downloads/mail.jar"/>
+	<classpathentry kind="lib" path="C:/Users/luca/Downloads/postgresql-42.0.0.jre7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
